--- a/ms01_hyper_microservice/Cargo.toml
+++ b/ms01_hyper_microservice/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.6"
 hyper = "0.13.8"
 tokio = { version = "0.2", features = ["full"] }
