--- a/ms01_hyper_microservice/Cargo.toml
+++ b/ms01_hyper_microservice/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 [dependencies]
 futures = "0.3.6"
 hyper = "0.13.8"
+log = "0.4.11"
+pretty_env_logger = "0.4.0"
 tokio = { version = "0.2", features = ["full"] }
